[gd_scene load_steps=3 format=3 uid="uid://fnr2t4vp8jm5"]

[ext_resource type="Script" uid="uid://c62bc8fj5kym0" path="res://ui/tech_tree.gd" id="1_tuo3s"]
[ext_resource type="PackedScene" uid="uid://sien8qggqbbe" path="res://ui/tech_display.tscn" id="2_3rbga"]

[node name="TechTree" type="Control"]
layout_mode = 3
anchor_left = 0.25
anchor_top = 0.25
anchor_right = 0.75
anchor_bottom = 0.75
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tuo3s")

[node name="Button" type="Button" parent="."]
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -32.0
offset_bottom = 32.0
grow_horizontal = 0
text = "X"

[node name="TreeDisplay" type="SubViewportContainer" parent="."]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 31.0

[node name="SubViewport" type="SubViewport" parent="TreeDisplay"]
disable_3d = true
handle_input_locally = false
size = Vector2i(512, 256)
render_target_update_mode = 4

[node name="Camera2D" type="Camera2D" parent="TreeDisplay/SubViewport"]

[node name="Node2D" type="Node2D" parent="TreeDisplay/SubViewport"]

[node name="TechDisplay" parent="TreeDisplay/SubViewport/Node2D" instance=ExtResource("2_3rbga")]

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="mouse_entered" from="TreeDisplay" to="." method="_on_tree_display_mouse_entered"]
[connection signal="mouse_exited" from="TreeDisplay" to="." method="_on_tree_display_mouse_exited"]
